# autonomousvehiclelab

./: .gitignore
Microcontrollers/Arduino/CombinedControlCode/: CombinedControlCode.ino  MotorControlCode.ino
isaac_ros-dev/: frames_2025-04-24_18.56.18.gv  frames_2025-04-24_19.24.18.gv
isaac_ros-dev/configs/camera_configs/: cameras.json
isaac_ros-dev/launch/: bringup_launch.py  bringup_logging_launch.py
isaac_ros-dev/logging/logging_data/: log_file_0.txt  log_file_1.txt  log_file_2.txt
isaac_ros-dev/src/agv_bot_description/: package.xml
isaac_ros-dev/src/agv_car_description/: CMakeLists.txt  package.xml
isaac_ros-dev/src/agv_car_description/config/: controllers.yaml  dual_ekf_gps_navsat.yaml  ekf.yaml  ekf_gps.yaml  nav2_params.yaml  navsat_transfom.yaml  navsat_transform.yaml  slam_toolbox_params.yaml  twist_mux.yaml
isaac_ros-dev/src/agv_car_description/description/: agv_car.urdf  agv_car.xacro  agv_car2.xacro  final_agv_car.urdf  final_agv_car.xacro  inertial_macros.xacro  ros2_control_ackerman.xacro  ros2_control_bicycle.xacro  test.xacro
isaac_ros-dev/src/agv_car_description/launch/: agv_sim_launch.py  display.launch.py  nav2_launch.py  physical_car_launch.py  physical_car_with_nav2.launch.py
isaac_ros-dev/src/agv_car_description/rviz/: bicbot.rviz
isaac_ros-dev/src/agv_car_gazebo/launch/: spawn_agv_car.launch.py
isaac_ros-dev/src/arduino_car_hardware/: CMakeLists.txt  arduino_car_hardware_plugins.xml  package.xml
isaac_ros-dev/src/arduino_car_hardware/include/: arduino_car_hardware.h  arduino_comms.h  arduino_comms.hpp  carlikebot_system.h  carlikebot_system.hpp  steering.h  steering.hpp  traction.h  traction.hpp
isaac_ros-dev/src/arduino_car_hardware/share/: arduino_car_hardware_plugins.xml
isaac_ros-dev/src/arduino_car_hardware/src/: arduino_car_hardware.cpp  arduino_comms.cpp  carlikebot_system.cpp  robot.cpp  tes  test.cpp
isaac_ros-dev/src/arduino_car_hardware/test/: CMakeLists.txt  test1  test1.cpp  test_load_carlikebot_system.cpp
isaac_ros-dev/src/data_logger/src/: data_logger_node.cpp
isaac_ros-dev/src/fake_localization_sensors/: package.xml  setup.py
isaac_ros-dev/src/fake_localization_sensors/fake_localization_sensors/: fake_gps_imu.py
isaac_ros-dev/src/generic_topic_tools/: package.xml  setup.cfg  setup.py
isaac_ros-dev/src/generic_topic_tools/generic_topic_tools/: generic_relay_node.py
isaac_ros-dev/src/image_stitcher/image_stitcher/: image_stitcher_node.py
isaac_ros-dev/src/motor_control_pkg/motor_control_pkg/: motor_control_node.py
isaac_ros-dev/src/motor_control_pkg_car2/: package.xml  setup.cfg  setup.py
isaac_ros-dev/src/motor_control_pkg_car2/motor_control_pkg_car2/: motor_control_node.py
isaac_ros-dev/src/teleop_twist_keyboard/: teleop_twist__keyboard.py  teleop_twist_keyboard.py
isaac_ros-dev/src/yolopv2_perception/utils/: utils.py
workspaces/isaac_ros-dev/configs/camera_configs/: cameras.json
workspaces/isaac_ros-dev/launch/: bringup_launch.py  demo2_launch.py
workspaces/isaac_ros-dev/src/end_to_end_CNN/end_to_end_CNN/: end_to_end_CNN_node.py
workspaces/isaac_ros-dev/src/image_stitcher/image_stitcher/: image_stitcher_node.py
