<?xml version="1.0"?>
<package format="3">
  <name>arduino_car_hardware</name>
  <version>0.1.0</version>
  <description>Arduino-based ROS 2 hardware interface with a bicycle controller for use with ros2_control.</description>

  <!-- Maintainer Information -->
  <maintainer email="avishwakarma@cpp.edu">Abhishek Vishwakarma</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tool dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Core Dependencies -->
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>controller_interface</depend>
  <depend>controller_manager</depend>
  <depend>geometry_msgs</depend>
  <depend>boost</depend>

  <!-- Execution Dependencies -->
  <exec_depend>teleop_twist_keyboard</exec_depend>
  <exec_depend>twist_mux</exec_depend>

  <!-- Testing and Linting Dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- Export plugin for ROS 2 control -->
  <export>
    <hardware_interface plugin="${prefix}/share/arduino_car_hardware_plugins.xml"/>
  </export>

</package>
